--- a/index.html
+++ b/index.html
@@ -16,16 +16,30 @@
 </head>
 
 <body>
-    <section class="topbanar">
-        <div class="half-weath">
-            <h1 class="header"><b>New Web Devolaper</b> </h1>
-            <h3 class="name">SAIF ISHRAK KHAN</h3>
-            <p class="details">amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar
+    <section class="topbanar" id="tb">
+        <div class=" half-weath ">
+            <h1 class="header "><b>New Web Devolaper</b> </h1>
+            <h3 class="name ">SAIF ISHRAK KHAN</h3>
+            <h4>I am freasher.I want work hard</h4>
+            <p class="details ">amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar
                 bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.</p>
-            <a class="link-button" target="_blank" href="http://www.linkedin.com/in/saif-ishrak-87b589137">more info</a>
+            <p></p>
+            <a class="link-button " target="_blank " href="http://www.linkedin.com/in/saif-ishrak-87b589137 ">More Info</a>
         </div>
-        <div class="half-weath">
-            <img src="images/1.png" alt="">
+        <div class="half-weath ">
+            <img src="images/1.png " alt=" ">
+        </div>
+    </section>
+    <section class="topbanar ">
+        <div class="half-weath ">
+            <img src="images/2.png " alt=" ">
+        </div>
+        <div class="half-weath ">
+            <h4>I am freasher.I want work hard</h4>
+            <p class="details ">amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.amar sunar
+                bangla ami tumay valovashy.amar sunar bangla ami tumay valovashy.</p>
+            <p></p>
+
         </div>
     </section>
 
